--- a/campaign-abnormal-offline-notification.html
+++ b/campaign-abnormal-offline-notification.html
@@ -1,47 +1,59 @@
-<style>html,body { padding: 0; margin:0; }</style>
-<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-		<tbody>
-			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
-					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td align="left" valign="center">
-					<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-						<!--begin:Email content-->
-						<div style="padding-bottom: 30px; font-size: 17px; color:#d7263d;">
-							<strong>活動異常下架通知</strong>
-						</div>
-						<div style="padding-bottom: 30px">親愛的合作夥伴您好，<br>您的活動因異常狀況已被下架，相關資訊如下：</div>
-						<div style="padding-bottom: 20px;">
-							<strong>活動名稱：</strong> [活動名稱]<br>
-							<strong>下架原因：</strong> [下架原因]
-						</div>
-						<div style="padding-bottom: 20px;">
-							<a href="[活動管理連結]" style="color:#009ef7;text-decoration:none;">前往活動管理頁面</a>
-						</div>
-						<div style="padding-bottom: 20px;">
-							如有任何疑問，請聯絡客服：<br>
-							Email：<a href="mailto:service@hishops.com.tw" style="color:#009ef7;text-decoration:none;">service@hishops.com.tw</a><br>
-							電話：02-0000-0000
-						</div>
-						<div style="padding-bottom: 30px; color:#7E8299;">感謝您的配合，讓我們一起維護平台品質！</div>
-						<!--end:Email content-->
-						<div style="padding-bottom: 10px">好嗨商團隊 敬上。
-						<tr>
-							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-								<p>台北市重慶北路一段26巷9弄1號3樓</p>
-								<p>Copyright &copy; 
-								<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
-							</td>
-						</tr></br></div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div> 
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>活動異常下架通知</title>
+		<style>
+			html,body { padding: 0; margin:0; }
+		</style>
+	</head>
+	<body>
+		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
+			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
+				<tbody>
+					<tr>
+						<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
+							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+								<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td align="left" valign="center">
+							<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
+								<!--begin:Email content-->
+								<div style="padding-bottom: 30px; font-size: 17px; color:#d7263d;">
+									<strong>活動異常下架通知</strong>
+								</div>
+								<div style="padding-bottom: 30px">親愛的合作夥伴您好，<br>您的活動因異常狀況已被下架，相關資訊如下：</div>
+								<div style="padding-bottom: 20px;">
+									<strong>活動名稱：</strong> [活動名稱]<br>
+									<strong>下架原因：</strong> [下架原因]
+								</div>
+								<div style="padding-bottom: 20px;">
+									<a href="[活動管理連結]" style="color:#009ef7;text-decoration:none;">前往活動管理頁面</a>
+								</div>
+								<div style="padding-bottom: 20px;">
+									如有任何疑問，請聯絡客服：<br>
+									Email：<a href="mailto:service@hishops.com.tw" style="color:#009ef7;text-decoration:none;">service@hishops.com.tw</a><br>
+									電話：02-0000-0000
+								</div>
+								<div style="padding-bottom: 30px; color:#7E8299;">感謝您的配合，讓我們一起維護平台品質！</div>
+								<!--end:Email content-->
+								<div style="padding-bottom: 10px">好嗨商團隊 敬上。
+								<tr>
+									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+										<p>台北市重慶北路一段26巷9弄1號3樓</p>
+										<p>Copyright &copy; 
+										<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
+									</td>
+								</tr></br></div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</body>
+</html> 
