--- a/ec-password-changed.html
+++ b/ec-password-changed.html
@@ -1,37 +1,56 @@
-<style>html,body { padding: 0; margin:0; }</style>
-<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-		<tbody>
-			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px">
-					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png" />
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td align="left" valign="center">
-					<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-						<!--begin:Email content-->
-						<div style="padding-bottom: 30px; font-size: 17px;">
-							<strong>您好!</strong>
-						</div>
-						<div style="padding-bottom: 20px">您的 好嗨商 HiShops 登入密碼已經更新了。</br>如果您已知曉上述資訊，請忽略這封電子郵件。</div>
-						<div style="padding-bottom: 40px">若您對此動作並不知情，請儘速聯繫我們的 
-						<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank" style="text-decoration:none;color: #009ef7; font-weight: bold">客服團隊</a> 您的數位安全對我們來說非常重要!</div>
-						<!--end:Email content-->
-						<div style="padding-bottom: 10px">順頌商祺,
-						<br>好嗨商團隊
-						<tr>
-							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-								<p>台北市重慶北路一段26巷9弄1號3樓</p>
-								<p>Copyright &copy; 
-								<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
-							</td>
-						</tr></br></div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>密碼變更通知</title>
+		<style>
+			html,body { padding: 0; margin:0; }
+		</style>
+	</head>
+	<body>
+		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
+			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
+				<tbody>
+					<tr>
+						<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
+							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+								<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td align="left" valign="center">
+							<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
+								<!--begin:Email content-->
+								<div style="padding-bottom: 30px; font-size: 17px; color:#28a745;">
+									<strong>密碼變更通知</strong>
+								</div>
+								<div style="padding-bottom: 30px">親愛的用戶您好，<br>您的密碼已成功變更。</div>
+								<div style="padding-bottom: 20px;">
+									<strong>變更時間：</strong> [變更時間]<br>
+									<strong>IP 位址：</strong> [IP 位址]
+								</div>
+								<div style="padding-bottom: 20px;">
+									如果這不是您本人的操作，請立即聯絡客服：<br>
+									Email：<a href="mailto:service@hishops.com.tw" style="color:#009ef7;text-decoration:none;">service@hishops.com.tw</a><br>
+									電話：02-0000-0000
+								</div>
+								<div style="padding-bottom: 30px; color:#7E8299;">感謝您的使用！</div>
+								<!--end:Email content-->
+								<div style="padding-bottom: 10px">好嗨商團隊 敬上。
+								<tr>
+									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+										<p>台北市重慶北路一段26巷9弄1號3樓</p>
+										<p>Copyright &copy; 
+										<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
+									</td>
+								</tr></br></div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</body>
+</html>
