--- a/hishops-signup-verify-email.html
+++ b/hishops-signup-verify-email.html
@@ -1,42 +1,54 @@
-<style>html,body { padding: 0; margin:0; }</style>
-<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-		<tbody>
-			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
-					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td align="left" valign="center">
-					<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-						<!--begin:Email content-->
-						<div style="padding-bottom: 30px; font-size: 17px;">
-							<strong>歡迎您註冊 好嗨商 | HiShops！</strong>
-						</div>
-						<div style="padding-bottom: 30px">請點擊下方按鈕驗證您的電子郵件信箱，以啟動您的帳戶。<br>啟動後30天內，您可以完整使用我們的全部的服務。</div>
-						<div style="padding-bottom: 40px; text-align:center;">
-							<a href="https://www.hishops.com.tw/" rel="noopener" style="text-decoration:none;display:inline-block;text-align:center;padding:0.75575rem 1.3rem;font-size:0.925rem;line-height:1.5;border-radius:0.35rem;color:#ffffff;background-color:#009ef7;border:0px;margin-right:0.75rem!important;font-weight:600!important;outline:none!important;vertical-align:middle" target="_blank">啟動帳戶</a>
-						</div>
-						<div style="border-bottom: 1px solid #eeeeee; margin: 15px 0"></div>
-						<div style="padding-bottom: 50px; word-wrap: break-all;">
-							<p style="margin-bottom: 10px;">按鈕無法點擊? 請將以下網址貼到您的瀏覽器中：</p>
-							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank" style="text-decoration:none;color: #009ef7">account verification link</a>
-						</div>
-						<!--end:Email content-->
-						<div style="padding-bottom: 10px">好嗨商團隊 敬上。
-						<tr>
-							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-								<p>台北市重慶北路一段26巷9弄1號3樓</p>
-								<p>Copyright &copy; 
-								<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
-							</td>
-						</tr></br></div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>帳號驗證</title>
+		<style>
+			html,body { padding: 0; margin:0; }
+		</style>
+	</head>
+	<body>
+		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
+			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
+				<tbody>
+					<tr>
+						<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">
+							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+								<img alt="Logo" width="60" height="70" src="https://www.hishops.com.tw/img/HiShop_yellow_darkStroke.png"/>
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td align="left" valign="center">
+							<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
+								<!--begin:Email content-->
+								<div style="padding-bottom: 30px; font-size: 17px;">
+									<strong>歡迎您註冊 好嗨商 | HiShops！</strong>
+								</div>
+								<div style="padding-bottom: 30px">請點擊下方按鈕驗證您的電子郵件信箱，以啟動您的帳戶。<br>啟動後30天內，您可以完整使用我們的全部的服務。</div>
+								<div style="padding-bottom: 40px; text-align:center;">
+									<a href="https://www.hishops.com.tw/" rel="noopener" style="text-decoration:none;display:inline-block;text-align:center;padding:0.75575rem 1.3rem;font-size:0.925rem;line-height:1.5;border-radius:0.35rem;color:#ffffff;background-color:#009ef7;border:0px;margin-right:0.75rem!important;font-weight:600!important;outline:none!important;vertical-align:middle" target="_blank">啟動帳戶</a>
+								</div>
+								<div style="border-bottom: 1px solid #eeeeee; margin: 15px 0"></div>
+								<div style="padding-bottom: 50px; word-wrap: break-all;">
+									<p style="margin-bottom: 10px;">按鈕無法點擊? 請將以下網址貼到您的瀏覽器中：</p>
+									<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank" style="text-decoration:none;color: #009ef7">account verification link</a>
+								</div>
+								<!--end:Email content-->
+								<div style="padding-bottom: 10px">好嗨商團隊 敬上。
+								<tr>
+									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+										<p>台北市重慶北路一段26巷9弄1號3樓</p>
+										<p>Copyright &copy; 
+										<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">好嗨商 | HiShops</a></p>
+									</td>
+								</tr></br></div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</body>
+</html>
