--- a/refund-completed-notification.html
+++ b/refund-completed-notification.html
@@ -1,7 +1,17 @@
-<style>html,body { padding: 0; margin:0; }</style>
-<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
-	<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
-		<tbody>
+<!DOCTYPE html>
+<html lang="zh-TW">
+	<head>
+		<meta charset="UTF-8">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<title>退款完成通知</title>
+		<style>
+			html,body { padding: 0; margin:0; }
+		</style>
+	</head>
+	<body>
+		<div style="font-family:Arial,Helvetica,sans-serif; line-height: 1.5; font-weight: normal; font-size: 15px; color: #2F3044; min-height: 100%; margin:0; padding:0; width:100%; background-color:#edf2f7">
+			<table align="center" border="0" cellpadding="0" cellspacing="0" width="100%" style="border-collapse:collapse;margin:0 auto; padding:0; max-width:600px">
+				<tbody>
 <!--			<tr th:if="${refundInfo.companyLogo}">-->
 <!--				<td align="center" valign="center" style="text-align:center; padding: 40px;" width="120px" height="120px">-->
 <!--					<a th:href="${refundInfo.companyWebsite}" rel="noopener" target="_blank">-->
@@ -9,52 +19,54 @@
 <!--					</a>-->
 <!--				</td>-->
 <!--			</tr>-->
-			<tr>
-				<td align="center" valign="center" style="text-align:center; padding: 40px">
-					<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
-						<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" />
-					</a>
-				</td>
-			</tr>
-			<tr>
-				<td align="left" valign="center">
-					<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
-						<!--begin:Email content-->
-						<div style="padding-bottom: 30px; font-size: 17px; color:#28a745;">
-							<strong>退款完成通知</strong>
-						</div>
-						<div style="padding-bottom: 30px">親愛的買家，您好<br>賣家已確認完成您的退貨退款處理，請您檢查退款是否已到帳。</div>
-						<div style="padding-bottom: 20px;">
-							<strong>退款資訊：</strong><br>
-							<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
-								<li>訂單編號：<span th:text="${refundInfo.orderNumber}">[訂單編號]</span></li>
-								<li>退款金額：<span th:text="${refundInfo.refundAmount}">[退款金額]</span></li>
-								<li>退款時間：<span th:text="${refundInfo.refundTime}">[退款時間]</span></li>
-								<li>退款方式：<span th:text="${refundInfo.refundMethod}">[退款方式，如銀行轉帳、信用卡退款等]</span></li>
-							</ul>
-						</div>
-						<!-- <div style="padding-bottom: 20px; color:#6c757d;">
-							<strong>重要提醒：</strong><br>
-							此退款係由賣家依雙方同意之方式處理，本平台僅提供通知服務，不介入退款流程。請您確認退款是否已正確到帳，如有任何問題請直接與賣家聯繫。
-						</div> -->
-						<div style="padding-bottom: 20px;">
-							如有任何疑問，請聯絡客服：<br>
-							Email：<a th:href="'mailto:' + ${refundInfo.serviceEmail}" style="color:#009ef7;text-decoration:none;" th:text="${refundInfo.serviceEmail}">[serviceEmail]</a><br>
-							電話：<span th:text="${refundInfo.servicePhone}">[servicePhone]</span>
-						</div>
-						<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持，祝您購物愉快！</div>
-						<!--end:Email content-->
-						<div style="padding-bottom: 10px"><span th:text="${refundInfo.teamName}">[storeName]</span> 敬上。
-						<tr>
-							<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
-								<p th:text="${refundInfo.companyAddress}">[companyAddress]</p>
-								<p>Copyright &copy; 
-								<a th:href="${refundInfo.companyWebsite}" rel="noopener" target="_blank" th:text="${refundInfo.companyName}">[companyName]</a></p>
-							</td>
-						</tr></br></div>
-					</div>
-				</td>
-			</tr>
-		</tbody>
-	</table>
-</div>
+					<tr>
+						<td align="center" valign="center" style="text-align:center; padding: 40px">
+							<a href="https://www.hishops.com.tw/" rel="noopener" target="_blank">
+								<img alt="Logo" width="60" height="70" src="https://s3.keywaycloud.com.tw/common/email-assets/HiShop_yellow_darkStroke.png" />
+							</a>
+						</td>
+					</tr>
+					<tr>
+						<td align="left" valign="center">
+							<div style="text-align:left; margin: 0 20px; padding: 40px; background-color:#ffffff; border-radius: 6px">
+								<!--begin:Email content-->
+								<div style="padding-bottom: 30px; font-size: 17px; color:#28a745;">
+									<strong>退款完成通知</strong>
+								</div>
+								<div style="padding-bottom: 30px">親愛的買家，您好<br>賣家已確認完成您的退貨退款處理，請您檢查退款是否已到帳。</div>
+								<div style="padding-bottom: 20px;">
+									<strong>退款資訊：</strong><br>
+									<ul style="margin: 10px 0 10px 20px; padding:0; color:#009ef7;">
+										<li>訂單編號：<span th:text="${refundInfo.orderNumber}">[訂單編號]</span></li>
+										<li>退款金額：<span th:text="${refundInfo.refundAmount}">[退款金額]</span></li>
+										<li>退款時間：<span th:text="${refundInfo.refundTime}">[退款時間]</span></li>
+										<li>退款方式：<span th:text="${refundInfo.refundMethod}">[退款方式，如銀行轉帳、信用卡退款等]</span></li>
+									</ul>
+								</div>
+								<!-- <div style="padding-bottom: 20px; color:#6c757d;">
+									<strong>重要提醒：</strong><br>
+									此退款係由賣家依雙方同意之方式處理，本平台僅提供通知服務，不介入退款流程。請您確認退款是否已正確到帳，如有任何問題請直接與賣家聯繫。
+								</div> -->
+								<div style="padding-bottom: 20px;">
+									如有任何疑問，請聯絡客服：<br>
+									Email：<a th:href="'mailto:' + ${refundInfo.serviceEmail}" style="color:#009ef7;text-decoration:none;" th:text="${refundInfo.serviceEmail}">[serviceEmail]</a><br>
+									電話：<span th:text="${refundInfo.servicePhone}">[servicePhone]</span>
+								</div>
+								<div style="padding-bottom: 30px; color:#7E8299;">感謝您的支持，祝您購物愉快！</div>
+								<!--end:Email content-->
+								<div style="padding-bottom: 10px"><span th:text="${refundInfo.teamName}">[storeName]</span> 敬上。
+								<tr>
+									<td align="center" valign="center" style="font-size: 13px; text-align:center;padding: 20px; color: #6d6e7c;">
+										<p th:text="${refundInfo.companyAddress}">[companyAddress]</p>
+										<p>Copyright &copy; 
+										<a th:href="${refundInfo.companyWebsite}" rel="noopener" target="_blank" th:text="${refundInfo.companyName}">[companyName]</a></p>
+									</td>
+								</tr></br></div>
+							</div>
+						</td>
+					</tr>
+				</tbody>
+			</table>
+		</div>
+	</body>
+</html>
